# xdg-desktop-portal-lxqt

./: CHANGELOG  CMakeLists.txt  README.md
data/: CMakeLists.txt  lxqt-portals.conf  lxqt.portal  org.freedesktop.impl.portal.desktop.lxqt.desktop.in  org.freedesktop.impl.portal.desktop.lxqt.service.in  xdg-desktop-portal-lxqt.service.in
src/: CMakeLists.txt  access.cpp  access.h  choices.cpp  choices.h  desktopportal.cpp  desktopportal.h  filechooser.cpp  filechooser.h  filedialoghelper.cpp  filedialoghelper.h  main.cpp  utils.cpp  utils.h
